components/policies/pod-security-standards/restricted/require-run-as-non-root-user/policy.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-run-as-non-root-user
  labels:
    app.kubernetes.io/name: require-run-as-non-root-user
    app.kubernetes.io/component: pod-security-standards-restricted
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:    [""]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["pods"]
        scope:        "Namespaced"
      - apiGroups:    ["apps"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["daemonsets", "deployments", "statefulsets"]
        scope:        "Namespaced"
      - apiGroups:    ["batch"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["cronjobs", "jobs"]
        scope:        "Namespaced"
  variables:
    - expression: object.spec.?template.?spec.?securityContext.?runAsUser
      name: controllerRunAsUser
    - expression: object.spec.?jobTemplate.?spec.?template.?spec.?securityContext.?runAsUser
      name: cronJobRunAsUser
    - expression: object.spec.?securityContext.?runAsUser
      name: podRunAsUser
    - expression: variables.controllerRunAsUser.or(variables.cronJobRunAsUser).or(variables.podRunAsUser)
      name: allRunAsUser
    - expression:
        object.spec.?template.?spec.?containers.orValue([]) +
        object.spec.?template.?spec.?initContainers.orValue([]) +
        object.spec.?template.?spec.?ephemeralContainers.orValue([])
      name: controllerContainer
    - expression:
        object.spec.?jobTemplate.?spec.?template.?spec.?containers.orValue([]) +
        object.spec.?jobTemplate.?spec.?template.?spec.?initContainers.orValue([]) +
        object.spec.?jobTemplate.?spec.?template.?spec.?ephemeralContainers.orValue([])
      name: cronJobContainers
    - expression:
        object.spec.?containers.orValue([]) +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
      name: podContainers
    - expression: variables.controllerContainer + variables.cronJobContainers + variables.podContainers
      name: allContainers
  validations:
    - expression:
        variables.allRunAsUser.orValue(1) > 0 &&
        variables.allContainers.all(container,
          container.?securityContext.?runAsUser.orValue(1) > 0)
      message: Running as root is not allowed. The field securityContext.runAsUser must be unset or set to a number greater than zero.
      reason: Invalid
  auditAnnotations:
    - key: name
      valueExpression: string(object.metadata.name)
